@@ -1,8 +1,8 @@
 package commands;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import client.HeadlessInstance;
+
+import java.util.*;
 
 public class CommandSyntax {
     private final String name;
@@ -16,12 +16,16 @@ public class CommandSyntax {
     }
 
     public Optional<List<Object>> tryParse(String s) {
-        List<String> stringList = List.of(s.split(" "));
-        List<Object> results = new ArrayList<>();
-        for (Argument<?> argument : arguments) {
-            results.add(argument.parse(stringList));
+        try {
+            List<String> stringList = new LinkedList<>(Arrays.asList(s.split(" ")));
+            List<Object> results = new ArrayList<>();
+            for (Argument<?> argument : arguments) {
+                results.add(argument.parse(stringList));
+            }
+            return Optional.of(results);
+        } catch (Exception e) {
+            return Optional.empty();
         }
-        return Optional.of(results);
     }
 
     public String getName() {
@@ -32,13 +36,12 @@ public class CommandSyntax {
         return getName().equalsIgnoreCase(s.split(" ")[0]);
     }
 
-    public void execute(String s) {
+    protected boolean execute(String s, List<HeadlessInstance> instances) {
         Optional<List<Object>> args = tryParse(s);
-        if (args.isEmpty()) return;
-        executor.execute(this, args.get());
+        if (args.isEmpty()) return false;
+        executor.execute(this, args.get(), instances);
+        return true;
     }
-
-
 
     public static class builder {
         private final String name;
